Fix various broken styles

--- a/src/components/Carousel/carousel.module.css
+++ b/src/components/Carousel/carousel.module.css
@@ -1,5 +1,5 @@
 .carousel {
   display: flex;
   justify-content: center;
-  min-height: 40%;
+  min-height: 45vh;
 }
