--- a/src/components/Header/header.module.css
+++ b/src/components/Header/header.module.css
@@ -1,5 +1,5 @@
 .brandtext {
-  font-size: 3.5vw;
+  font-size: 3vmax;
   font-weight: bold;
   letter-spacing: 0.85rem;
   text-transform: uppercase;
